--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "qs": "^6.9.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "validator": "^12.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
