--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/repon85/WPQuiz#readme",
   "dependencies": {
     "axios": "^0.19.2",
+    "copy-text-to-clipboard": "^2.1.1",
     "qs": "^6.9.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
